<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoActivity"
    android:background="@color/principal">

    <View
        android:id="@+id/backgroundresultado"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </View>

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/resultado"
        android:textColor="@color/principal"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <TextView
        android:id="@+id/bv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/bandeira_vermelha"
        android:textColor="@color/principal"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/backgroundresultado"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@id/backgroundresultado"
        app:layout_constraintTop_toBottomOf="@id/resultado">

    </TextView>



    <TextView
        android:id="@+id/ba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/bandeira_amarela"
        android:textColor="@color/principal"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/backgroundresultado"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@id/backgroundresultado"
        app:layout_constraintTop_toBottomOf="@id/bv">
    </TextView>

    <ImageView
        android:id="@+id/bandeiraVermelhaIcone"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/ic_bandeira_vermelha"
        app:layout_constraintBottom_toBottomOf="@+id/bv"
        app:layout_constraintStart_toEndOf="@id/bv"
        app:layout_constraintTop_toTopOf="@+id/bv" />

    <ImageView
        android:id="@+id/bandeiraVerdeIcone"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_bandeira_verde"
        app:layout_constraintBottom_toBottomOf="@+id/bvr"
        app:layout_constraintEnd_toEndOf="@+id/BandeiraAmarelaIcone"
        app:layout_constraintStart_toStartOf="@+id/BandeiraAmarelaIcone"
        app:layout_constraintTop_toTopOf="@+id/bvr" />

    <ImageView
        android:id="@+id/BandeiraAmarelaIcone"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_bandeira_amarela"
        app:layout_constraintBottom_toBottomOf="@+id/ba"
        app:layout_constraintStart_toStartOf="@+id/bandeiraVermelhaIcone"
        app:layout_constraintTop_toTopOf="@+id/ba" />

    <TextView
        android:id="@+id/bvr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/bandeira_verde"
        android:textColor="@color/principal"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/backgroundresultado"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@id/backgroundresultado"
        app:layout_constraintTop_toBottomOf="@id/ba">
    </TextView>

    <TextView
        android:id="@+id/BandeiraVermelha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/principal"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/bandeiraVermelhaIcone"
        app:layout_constraintBottom_toBottomOf="@id/bandeiraVermelhaIcone"
        app:layout_constraintTop_toTopOf="@id/bandeiraVermelhaIcone"
        >

    </TextView>

    <TextView
        android:id="@+id/BandeiraAmarela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/principal"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@id/BandeiraAmarelaIcone"
        app:layout_constraintBottom_toBottomOf="@id/BandeiraAmarelaIcone"
        app:layout_constraintStart_toEndOf="@id/BandeiraAmarelaIcone"
        >

    </TextView>

    <TextView
        android:id="@+id/BandeiraVerde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/principal"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@id/bandeiraVerdeIcone"
        app:layout_constraintStart_toEndOf="@id/bandeiraVerdeIcone"
        app:layout_constraintBottom_toBottomOf="@id/bandeiraVerdeIcone"
        >

    </TextView>

    <Button
        android:id="@+id/novaconsulta"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/white"
        android:hint="@string/nova_consulta"
        android:textColorHint="@color/principal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backgroundresultado"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>